@@ -142,6 +142,7 @@ enum
 	DC_LANG_SWEDISH,
 	DC_LANG_FINNISH,
 	DC_LANG_GERMAN,
+	DC_LANG_NORWEGIAN,
 	DC_LANG_NUM		// Place holder
 };
 
